# fra_rp2350

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.h.example  flash_pico.sh  reset_and_monitor.sh
docs/: flash_pico.md  implementation_notes.md  reset_monitor_docs.md
include/: adc_dma.h  config.h  goertzel.h  lwipopts.h  mqtt_client.h
src/: ad9833.c  ad9833.h  adc_dma.c  goertzel.c  main.c  mqtt_client.c  mqtt_client.h  sweep.c  sweep.h
